<resources>
    <string name="app_name">Cars</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="fuel_consumption_for_trip">Fuel Consumption For Trip</string>
    <string name="fuel_value">Fuel Value</string>
    <string name="litres_of_fuel">Litres of Fuel</string>
    <string name="trip_distance_in_km">Trip Distance(in Km)</string>
    <string name="calculate">Calculate</string>
    <string name="km_litre">(km/litre)</string>
    <string name="save">Save</string>
    <string name="add_your_first_vehicle">Add your first Vehicle</string>
    <string name="username">username</string>
    <string name="password_login">password</string>
    <string name="log_in">Log in</string>
    <string name="not_a_user_register_here">Not a user, Register here</string>
    <string name="username_register">Username</string>
    <string name="email">Email</string>
    <string name="password_register">password</string>
    <string name="register">Register</string>
    <string name="already_a_user_log_in">Already a user, Log in</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="plate_no">Plate No.</string>
    <string name="engine_capacity">Engine Capacity</string>
    <string name="odometer_reading">Odometer Reading</string>
    <string name="add">ADD</string>
    <string name="vehicles_owned">Vehicles Owned</string>
    <string name="Vehicle_Name">Vehicle Name</string>
    <string name="plate_number">Plate No</string>
    <string name="Engine_Capacity">Engine Capacity</string>
    <string name="odometer">Odometer</string>
    <string name="cars">Cars</string>
    <string name="vehicles">Vehicles</string>
    <string name="fuel_consumption">Fuel Consumption</string>
    <string name="services">Services</string>
    <string name="dealerships">Dealerships</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="maintenance">Maintenance</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="success">Success</string>
    <string name="title_activity_ware_houses">Map</string>
    <string name="welcome">Welcome</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
</resources>
