<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@color/colorPrimary"
    >

    <EditText
        android:background="@drawable/edtext"
        android:id="@+id/username"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/username_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edtext"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        />
    <EditText
        android:id="@+id/password"
        android:background="@drawable/edtext"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/password_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"

        />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btn_register"
            android:background="@drawable/edtext"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/register" />
    </LinearLayout>
    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user_log_in"
        android:gravity="center"
        android:textColor="@color/white"

        />

</LinearLayout>