<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">


    <TextView

        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorPrimaryDark1"
        android:textStyle="bold"
        />
    <TextView

        android:id="@+id/username"
        android:layout_below="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/email"
        android:layout_below="@id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />

</RelativeLayout>