<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools">


    <android.support.v7.widget.CardView
        android:id ="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="3dp"
        card_view:cardUseCompatPadding= "true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="1dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/vehiclename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:textColor="#000"
                android:text="@string/vehicle_name"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/vehicleplate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vehiclename"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:textColor="#000"
                android:text="@string/plate_number"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/enginecapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vehicleplate"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:textColor="#000"
                android:text="@string/engine_capacity"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/odometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enginecapacity"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:textColor="#000"
                android:text="@string/odometer"
                android:textSize="12sp"
                />
        </RelativeLayout>




    </android.support.v7.widget.CardView>

</LinearLayout>